* fix logging * add more robustness when switching none implemented pages * display units * implement BuilderInformationPage